EnumConstructor and Primitives